--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
                                     <h2 class="text-center"><strong>In short...</strong></h2>
                                 </header>
                                 <ul class="fa-ul" id="acadSummary">
-                                    <li><i class="fa-li fa fa-star-o"></i>After four semesters, I currently have a CGPA of <strong>8.98</strong>.</li>
+                                    <li><i class="fa-li fa fa-star-o"></i>After four semesters, I currently have a CGPA of <strong>9.05</strong>.</li>
                                     <li><i class="fa-li fa fa-star-o"></i>I completed my 12th grade at Kendriya Vidyalaya CLRI, Chennai in <strong>2013</strong> with an aggregate score of <strong>93.8%</strong>.</li>
                                     <li><i class="fa-li fa fa-star-o"></i>I completed my 10th grade at Kendriya Vidyalaya CLRI, Chennai in <strong>2011</strong> with a CGPA of <strong>9</strong>.</li>
                                     <li><i class="fa-li fa fa-star-o"></i>My interest lies in Data Structures, Algorithms and Networks.</li>
                                 </ul>
                                 <footer class="major">
                                     <div class="buttons" id="panelButtons">
-                                        <a id="projectContentButton" href="" class="button fit" onclick="event.preventDefault(); toggleSlider('#projectContent');">Projects</a>
+                                        <a id="projectContentButton" href="" class="button fit" onclick="event.preventDefault(); toggleSlider('#projectContent');">Projects</a> 
                                         <a id="courseContentButton" href="" class="button fit" onclick="event.preventDefault(); toggleSlider('#courseContent');">Courses</a>
                                     </div>
 
@@ -239,6 +239,26 @@
                                             <table class="table borderless projectHeading">
                                                 <tbody>
                                                 <tr>
+                                                    <td class="col-md-8">Hostel Allocation System</td>
+                                                    <td class="col-md-4">Mar'16 - May'16</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <table class="table borderless projectPoints">
+                                                <tbody>
+                                                <tr>
+                                                    <td>
+                                                        <ul>
+                                                            <li>Created a project on hostel allocation system which enables students to select floors and rooms from various blocks.</li>
+                                                            <li>Technologies used are MongoDB, ExpressJS, AngularJS, NodeJS, popularly known as MEAN stack.</li>
+                                                        </ul>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <table class="table borderless projectHeading">
+                                                <tbody>
+                                                <tr>
                                                     <td class="col-md-8">Movie Theatre Booking System</td>
                                                     <td class="col-md-4">August'15 - September'15</td>
                                                 </tr>
@@ -251,6 +271,46 @@
                                                         <ul>
                                                             <li>Created a project on Movie Booking System of a theatre as part of the DBMS course.</li>
                                                             <li>Technologies used are Java, JDBC and MySQL.</li>
+                                                        </ul>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <table class="table borderless projectHeading">
+                                                <tbody>
+                                                <tr>
+                                                    <td class="col-md-8">Zoho Attendance</td>
+                                                    <td class="col-md-4">Jan'16</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <table class="table borderless projectPoints">
+                                                <tbody>
+                                                <tr>
+                                                    <td>
+                                                        <ul>
+                                                            <li>Wrote a Python script that scrapes the Zoho website built for displaying marks and attendance of SRM University students. Details of 730 students were scraped and stored in a database.</li>
+                                                            <li>Technologies used are Python, BeautifulSoup, MongoDB.</li>
+                                                        </ul>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <table class="table borderless projectHeading">
+                                                <tbody>
+                                                <tr>
+                                                    <td class="col-md-8">Result-Reminder</td>
+                                                    <td class="col-md-4">Feb'16</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <table class="table borderless projectPoints">
+                                                <tbody>
+                                                <tr>
+                                                    <td>
+                                                        <ul>
+                                                            <li>Wrote a Python script that scrapes SRM University’s main website (Announcements section) every 10 minutes to check if the results have been declared.</li>
+                                                            <li>Technologies used are Python, BeautifulSoup.</li>
                                                         </ul>
                                                     </td>
                                                 </tr>
@@ -306,6 +366,11 @@
                                                                 <li>Object Oriented Design and Analysis</li>
                                                                 <li>Microprocessor and Interfacing</li>
                                                                 <li>Cloud Computing</li>
+                                                                <li>Compiler Design and System Software</li>
+                                                                <li>Distributed Systems</li>
+                                                                <li>Linux Internals</li>
+                                                                <li>Web Technology</li>
+                                                                <li>Artificial Intelligence</li>
                                                             </ul>
                                                         </td>
                                                     </tr>
@@ -346,8 +411,10 @@
                                                         <td>
                                                             <ul>
                                                                 <li>Japanese Language I and II</li>
+                                                                <li>Stress Management</li>
                                                                 <li>Fundamentals of Entreprenuership</li>
                                                                 <li>Discrete Mathematics</li>
+                                                                <li>Disaster Management</li>
                                                                 <li>Soft Skills</li>
                                                             </ul>
                                                         </td>
